# Crypto_Arb_Bot

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.py
src/crypto_arb_bot/: credentials.py
